--- a/index.html
+++ b/index.html
@@ -158,13 +158,34 @@ function myContrFunction() {
 </a>
 </div>
 
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_sp.html" title = "Podcasts by Sarala Prakash" class = "anoline">
+<p>Sarala Prakash</p>
+<img src="./images/sp_small.png" class="w3-circle borderwhite" alt="Sarala Prakash"/>
+</a>
+</div>-->
+
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_sp2.html" title = "Podcasts by Shankhadip Paria" class = "anoline">
+<p>Shankhadip Paria</p>
+<img src="./images/sp2_small.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>
+</a>
+</div>-->
+
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_pp.html" title = "Podcasts by Prabhakar Pandey" class = "anoline">
+<p>Prabhakar Pandey</p>
+<img src="./images/pp_small.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>
+</a>
+</div>-->
+
 </div>
 
 <h3>Languages</h3>
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
+<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bhojpuri.html" class="w3-btn w3-white w3-round-jumbo border">Bhojpuri</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
 
 </div>
 
