SP's page and Kannada in menu

--- a/html/header.html
+++ b/html/header.html
@@ -38,7 +38,7 @@
       <a href="author_rs.html">Rahul Shabd</a>
       <a href="author_rr.html">Ruchi Rana</a>
       <a href="author_sr.html">Sandhya Rathore</a>
-	  <!--<a href="author_sp.html">Sarala Prakash</a>-->
+      <a href="author_sp.html">Sarala Prakash</a>
 	  <!--<a href="author_sp2.html">Shankhadip Paria</a>-->
       <a href="author_sa.html">Syed Aatirah</a>
       <a href="author_ss.html">Shishir Somvanshi</a>
@@ -46,8 +46,9 @@
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
 	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
 	  <a href="language_hindi.html">Hindi</a>
+	  <a href="language_kannada.html">Kannada</a>
 	  <a href="language_kashmiri.html">Kashmiri/Koshur</a>
-	  <a href="author_anon.html">Life</a>
+	  <a href="author_anon.html">Quick Bytes</a>
     </span>
 </span>
 &nbsp;&nbsp;<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow on Twitter</a>&nbsp;&nbsp;
