--- a/html/author_pp.html
+++ b/html/author_pp.html
@@ -35,7 +35,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Prabhakar Pandey</h2></header>
 
-<p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle border"/>...</p>
+<p><img src="../images/pp.png" class="w3-circle border"/>Prabhakar has been working with languages and computers since 2000. He's published and presented several research papers, articles, and stories in national and international conferences, seminars, workshops, and magazines. He writes regularly in Hindi and Bhojpuri.</p>
 
 <p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Bhojpuri%20audio%20stories%20by%20@gopalpuriya%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1pTHiuN&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
