--- a/html/language_bhojpuri.html
+++ b/html/language_bhojpuri.html
@@ -45,7 +45,7 @@ $(function(){
 <div class="w3-responsive">
 
 <div class="w3-row-padding w3-border">
-  <div class="w3-col s6"><p><img src="../images/ic_person_black_48dp_2x_tiny.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>&nbsp;&nbsp;Aapan se joojhat maibhakha (Prabhakar Pandey)</p></div>
+  <div class="w3-col s6"><p><img src="../images/pp_tiny.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>&nbsp;&nbsp;Aapan se joojhat maibhakha (Prabhakar Pandey)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/pp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
 
