--- a/html/header.html
+++ b/html/header.html
@@ -39,15 +39,16 @@
       <a href="author_rr.html">Ruchi Rana</a>
       <a href="author_sr.html">Sandhya Rathore</a>
       <a href="author_sp.html">Sarala Prakash</a>
-	  <!--<a href="author_sp2.html">Shankhadip Paria</a>-->
+      <a href="author_sp2.html">Shankhadip Paria</a>
       <a href="author_sa.html">Syed Aatirah</a>
       <a href="author_ss.html">Shishir Somvanshi</a>
     </span>
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
 	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
+	  <a href="language_bengali.html">Bengali</a>
 	  <a href="language_hindi.html">Hindi</a>
 	  <a href="language_kannada.html">Kannada</a>
-	  <a href="language_kashmiri.html">Kashmiri/Koshur</a>
+	  <a href="language_kashmiri.html">Kashmiri</a>
 	  <a href="author_anon.html">Quick Bytes</a>
     </span>
 </span>
