--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Santaapa</h3>
-  <p class="w3-text-grey w3-small">Kannada, 7 Apr 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/sp_small.png" class="w3-circle border"/> <audio src = "./mp3/sp_santaapa.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Sarala Prakash</h3>
+<h3 class = "w3-border-bottom">Biye barir byakaran</h3>
+  <p class="w3-text-grey w3-small">Bengali, 14 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/sp2_small.png" class="w3-circle border"/> <audio src = "./mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Shankhadip Paria</h3>
 </div> 
 </div>
 </div>
 <p>&nbsp;</p>
-<div class="w3-row">
+<<div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Chetana</h3>
-  <p class="w3-text-grey w3-small">Hindi, 31 Mar 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/ap_small.png" class="w3-circle border"/> <audio src = "./mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Ajay Purohit</h3>
+<h3 class = "w3-border-bottom">Santaapa</h3>
+  <p class="w3-text-grey w3-small">Kannada, 7 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/sp_small.png" class="w3-circle border"/> <audio src = "./mp3/sp_santaapa.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Sarala Prakash</h3>
 </div> 
 </div>
 </div>
@@ -165,12 +165,12 @@ function myContrFunction() {
 </a>
 </div>
 
-<!--<div class="authorcard w3-center w3-round-large">
+<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_sp2.html" title = "Podcasts by Shankhadip Paria" class = "anoline">
 <p>Shankhadip Paria</p>
 <img src="./images/sp2_small.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>
 </a>
-</div>-->
+</div>
 
 <!--<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_pp.html" title = "Podcasts by Prabhakar Pandey" class = "anoline">
@@ -185,7 +185,7 @@ function myContrFunction() {
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bhojpuri.html" class="w3-btn w3-white w3-round-jumbo border">Bhojpuri</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
+<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bhojpuri.html" class="w3-btn w3-white w3-round-jumbo border">Bhojpuri</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
 
 </div>
 
