--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ function myContrFunction() {
 </div>
 </div>
 <p>&nbsp;</p>
-<<div class="w3-row">
+<div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h3 class = "w3-border-bottom">Santaapa</h3>
