Removing sitemap from footer coz doesn't resolve as link when called

--- a/html/author_km.html
+++ b/html/author_km.html
@@ -53,7 +53,7 @@ $(function(){
 </div>
 
 <div id = "footer"></div>
-<div class = "w3-container"><p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "../sitemap.html"/>Sitemap</a></p></div>
+<div class = "w3-container"><p class = "w3-small"><a href = "../sitemap.html"/>Sitemap</a></p></div>
 
 </body>
 
