--- a/html/footer.html
+++ b/html/footer.html
@@ -22,7 +22,7 @@
 
 <p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
 
-<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "../sitemap.html"/>Sitemap</a></p>
+<p class = "w3-small">&copy;2016</p>
 
 </div>
 
