--- a/html/language_kashmiri.html
+++ b/html/language_kashmiri.html
@@ -33,7 +33,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Kashmiri/Koshur audio stories</h2></header>
+<header class = "w3-padding"><h2>Kashmiri audio stories</h2></header>
 
 <p>Trivia: The people of Kashmir refer to their language as Koshur, which is written in two scripts: Sharada and Perso-Arabic. Kashmiri belongs to Dardic group  of languages and is a cousin of other languages that are spoken in the Himayalan region, right up to eastern Afghanistan.</p>
 
@@ -54,6 +54,7 @@ $(function(){
 </div>
 
 <div id = "footer"></div>
+<div class = "w3-container"><p class = "w3-small"><a href = "../sitemap.html"/>Sitemap</a></p></div>
 
 </body>
 
