--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -33,7 +33,7 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Bengali/Bangla audio stories</h2></header>
+<header class = "w3-padding"><h2>Bengali audio stories</h2></header>
 
 <p>Trivia: Bengali is referred to as Bangla by its native speakers. It was the Bengali language movement, and the lives lost therefor, that led UNESCO to declare February 21 as International Mother Language Day.</p>
 
@@ -54,6 +54,7 @@ $(function(){
 </div>
 
 <div id = "footer"></div>
+<div class = "w3-container"><p class = "w3-small"><a href = "../sitemap.html"/>Sitemap</a></p></div>
 
 </body>
 
