--- a/html/language_kannada.html
+++ b/html/language_kannada.html
@@ -54,6 +54,7 @@ $(function(){
 </div>
 
 <div id = "footer"></div>
+<div class = "w3-container"><p class = "w3-small"><a href = "../sitemap.html"/>Sitemap</a></p></div>
 
 </body>
 
