Adding bengali and kannada

--- a/sitemap.html
+++ b/sitemap.html
@@ -52,18 +52,18 @@
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore (Hindi)</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp.html"><span class="title">Sarala Prakash (Kannada)</span></a></li>-->
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp2.html"><span class="title">Shankhadip Paria (Bengali/Bangla)</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp.html"><span class="title">Sarala Prakash (Kannada)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp2.html"><span class="title">Shankhadip Paria (Bengali/Bangla)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah (Kashmiri/Koshur)</span></a></li>
 </ul>
 </li></ul>
 <ul><li>Languages
 <ul>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bengali.html"><span class="title">Bengali stories</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/language_bengali.html"><span class="title">Bengali stories</span></a></li>
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bhojpuri.html"><span class="title">Bhojpuri stories</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds (Quick Bytes)</span></a></li>
 </ul>
