more authors and languages

--- a/html/header.html
+++ b/html/header.html
@@ -32,6 +32,9 @@
 	<span id = "authors" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="author_ap.html">Ajay Purohit</a>
       <a href="author_ab.html">Anindita Basu</a>
+	  <!--<a href="author_ad.html">Arjo Dasgupta</a>-->
+	  <!--<a href="author_hp.html">Himanshu Pandey</a>-->
+	  <!--<a href="author_km.html">Kumudavalli Arun Murthy</a>-->
       <a href="author_mk.html">Mohammad Kausen</a>
 	  <!--<a href="author_pp.html">Prabhakar Pandey</a>-->
       <a href="author_pk.html">Preran Kumar</a>
