--- a/sitemap.html
+++ b/sitemap.html
@@ -46,6 +46,9 @@
 <ul>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu (Hindi)</span></a></li>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_ad.html"><span class="title">Arjo Dasgupta (Bengali)</span></a></li>-->
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_hp.html"><span class="title">Himanshu Pandey (Hindi)</span></a></li>-->
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_km.html"><span class="title">Kumudavalli Arun Murthy (Kannada)</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen (Hindi)</span></a></li>
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_pp.html"><span class="title">Prabhakar Pandey (Bhojpuri)</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar (Hindi)</span></a></li>
@@ -53,9 +56,9 @@
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_sr.html"><span class="title">Sandhya Rathore (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_sp.html"><span class="title">Sarala Prakash (Kannada)</span></a></li>
-<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp2.html"><span class="title">Shankhadip Paria (Bengali/Bangla)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sp2.html"><span class="title">Shankhadip Paria (Bengali)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ss.html"><span class="title">Shishir Somvanshi (Hindi)</span></a></li>
-<li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah (Kashmiri/Koshur)</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_sa.html"><span class="title">Syed Aatirah (Kashmiri)</span></a></li>
 </ul>
 </li></ul>
 <ul><li>Languages
