minor style updates

--- a/index.html
+++ b/index.html
@@ -96,86 +96,107 @@ function myContrFunction() {
 <div id = "authors" class = "w3-container">
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_pk.html" title = "Podcasts by Preran Kumar" class = "anoline">
+<a href = "./html/author_pk.html" title = "Hindi podcasts by Preran Kumar" class = "anoline">
 <p>Preran Kumar</p>
 <img src="./images/pk_small.jpg" class="w3-circle borderwhite" alt="Preran Kumar"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_rr.html" title = "Podcasts by Ruchi Rana" class = "anoline">
+<a href = "./html/author_rr.html" title = "Hindi podcasts by Ruchi Rana" class = "anoline">
 <p>Ruchi Rana</p>
 <img src="./images/rr_small.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_ab.html" title = "Podcasts by Anindita Basu" class = "anoline">
+<a href = "./html/author_ab.html" title = "Hindi podcasts by Anindita Basu" class = "anoline">
 <p>Anindita Basu</p>
 <img src="./images/ab_small.PNG" class="w3-circle borderwhite" alt="Anindita Basu"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_ss.html" title = "Podcasts by Shishir Somvanshi" class = "anoline">
+<a href = "./html/author_ss.html" title = "Hindi podcasts by Shishir Somvanshi" class = "anoline">
 <p>Shishir Somvanshi</p>
 <img src="./images/ss_small.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_rs.html" title = "Podcasts by Rahul Shabd" class = "anoline">
+<a href = "./html/author_rs.html" title = "Hindi podcasts by Rahul Shabd" class = "anoline">
 <p>Rahul Shabd</p>
 <img src="./images/rs_small.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_sr.html" title = "Podcasts by Sandhya Rathore" class = "anoline">
+<a href = "./html/author_sr.html" title = "Hindi podcasts by Sandhya Rathore" class = "anoline">
 <p>Sandhya Rathore</p>
 <img src="./images/sr_small.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_sa.html" title = "Podcasts by Syed Aatirah" class = "anoline">
+<a href = "./html/author_sa.html" title = "Kashmiri podcasts by Syed Aatirah" class = "anoline">
 <p>Syed Aatirah</p>
 <img src="./images/sa_small.png" class="w3-circle borderwhite" alt="Syed Aatirah"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_mk.html" title = "Podcasts by Mohammad Kausen" class = "anoline">
+<a href = "./html/author_mk.html" title = "Hindi podcasts by Mohammad Kausen" class = "anoline">
 <p>Mohd Kausen</p>
 <img src="./images/mk_small.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_ap.html" title = "Podcasts by Ajay Purohit" class = "anoline">
+<a href = "./html/author_ap.html" title = "Hindi podcasts by Ajay Purohit" class = "anoline">
 <p>Ajay Purohit</p>
 <img src="./images/ap_small.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_sp.html" title = "Podcasts by Sarala Prakash" class = "anoline">
+<a href = "./html/author_sp.html" title = "Kannada podcasts by Sarala Prakash" class = "anoline">
 <p>Sarala Prakash</p>
 <img src="./images/sp_small.png" class="w3-circle borderwhite" alt="Sarala Prakash"/>
 </a>
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_sp2.html" title = "Podcasts by Shankhadip Paria" class = "anoline">
+<a href = "./html/author_sp2.html" title = "Bengali podcasts by Shankhadip Paria" class = "anoline">
 <p>Shankhadip Paria</p>
 <img src="./images/sp2_small.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>
 </a>
 </div>
 
 <!--<div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_pp.html" title = "Podcasts by Prabhakar Pandey" class = "anoline">
+<a href = "./html/author_pp.html" title = "Bhojpuri podcasts by Prabhakar Pandey" class = "anoline">
 <p>Prabhakar Pandey</p>
 <img src="./images/pp_small.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>
+</a>
+</div>-->
+
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli Arun Murthy" class = "anoline">
+<p>Kumudavalli Arun Murthy</p>
+<img src="./images/km_small.png" class="w3-circle borderwhite" alt="Kumudavalli Arun Murthy"/>
+</a>
+</div>-->
+
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_ad.html" title = "Bengali podcasts by Arjo Dasgupta" class = "anoline">
+<p>Arjo Dasgupta</p>
+<img src="./images/ad_small.png" class="w3-circle borderwhite" alt="Arjo Dasgupta"/>
+</a>
+</div>-->
+
+<!--<div class="authorcard w3-center w3-round-large">
+<a href = "./html/author_hp.html" title = "Hindi podcasts by Himanshu  Pandey" class = "anoline">
+<p>Himanshu  Pandey</p>
+<img src="./images/hp_small.png" class="w3-circle borderwhite" alt="Himanshu Pandey"/>
 </a>
 </div>-->
 
