encoding should be UTF-8

--- a/html/author_pp.html
+++ b/html/author_pp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 
 <head>
@@ -44,8 +44,8 @@ $(function(){
 <div class="w3-responsive">
 
 <div class="w3-row-padding w3-border">
-  <div class="w3-col s6"><p>Aapan se joojhat maibhakha (Bhojpuri)</p></div>
-  <div class="w3-col s6"><p><audio src = "../mp3/sp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+  <div class="w3-col s6"><p>Apnan se joojhat maibhakha (Bhojpuri)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/pp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
 
 </div>
