PP and lang from menu

--- a/html/header.html
+++ b/html/header.html
@@ -36,7 +36,7 @@
 	  <!--<a href="author_hp.html">Himanshu Pandey</a>-->
 	  <!--<a href="author_km.html">Kumudavalli Arun Murthy</a>-->
       <a href="author_mk.html">Mohammad Kausen</a>
-	  <!--<a href="author_pp.html">Prabhakar Pandey</a>-->
+      <a href="author_pp.html">Prabhakar Pandey</a>
       <a href="author_pk.html">Preran Kumar</a>
       <a href="author_rs.html">Rahul Shabd</a>
       <a href="author_rr.html">Ruchi Rana</a>
@@ -49,6 +49,7 @@
 &nbsp;&nbsp;<button onclick="myLangFunction()" class = "w3-btn w3-round-jumbo w3-white border">Languages</button>
 	<span id = "languages" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
 	  <a href="language_bengali.html">Bengali</a>
+	  <a href="language_bengali.html">Bhojpuri</a>
 	  <a href="language_hindi.html">Hindi</a>
 	  <a href="language_kannada.html">Kannada</a>
 	  <a href="language_kashmiri.html">Kashmiri</a>
