PP and language

--- a/sitemap.html
+++ b/sitemap.html
@@ -50,7 +50,7 @@
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_hp.html"><span class="title">Himanshu Pandey (Hindi)</span></a></li>-->
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_km.html"><span class="title">Kumudavalli Arun Murthy (Kannada)</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen (Hindi)</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_pp.html"><span class="title">Prabhakar Pandey (Bhojpuri)</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_pp.html"><span class="title">Prabhakar Pandey (Bhojpuri)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana (Hindi)</span></a></li>
@@ -64,7 +64,7 @@
 <ul><li>Languages
 <ul>
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_bengali.html"><span class="title">Bengali stories</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bhojpuri.html"><span class="title">Bhojpuri stories</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/language_bhojpuri.html"><span class="title">Bhojpuri stories</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a></li>
