--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>Afsana: Podcasts of Indian language stories (audio stories in Hindi, Bengali, Kashmiri, Kannada, and more)</title>
+<title>Afsana: Podcasts of Indian language stories (audio stories in Hindi, Bengali, Kannada, Bhojpuri, and more)</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@ function myContrFunction() {
 
 <hr/>
 
-<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of India &mdash; your language. We have podcasts in Hindi, Kashmiri, Kannada, Bengali, ...</p>
+<p>Is not one's native tongue is the sweetest of all languages on earth? Come, then, and listen to a story in a native language of India &mdash; your language. We have podcasts in Hindi, Kashmiri, Kannada, Bengali, and Bhojpuri as of now.</p>
 
 <p>Every Thursday, we upload an audio story written and narrated by ordinary people living ordinary lives but watching Life as it tells them stories. This earthiness of amateur voices, thinking and speaking in their mother tongues, is something that we hope will prevent us from being de-racinated.</p>
 
@@ -61,10 +61,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Biye barir byakaran</h3>
-  <p class="w3-text-grey w3-small">Bengali, 14 Apr 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/sp2_small.png" class="w3-circle border"/> <audio src = "./mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Shankhadip Paria</h3>
+<h3 class = "w3-border-bottom">Apnan se joojhat maibhakha</h3>
+  <p class="w3-text-grey w3-small">Bhojpur, 21 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/pp_small.png" class="w3-circle border"/> <audio src = "./mp3/pp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Prabhakar Pandey</h3>
 </div> 
 </div>
 </div>
@@ -72,10 +72,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Santaapa</h3>
-  <p class="w3-text-grey w3-small">Kannada, 7 Apr 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/sp_small.png" class="w3-circle border"/> <audio src = "./mp3/sp_santaapa.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Sarala Prakash</h3>
+<h3 class = "w3-border-bottom">Biye barir byakaran</h3>
+  <p class="w3-text-grey w3-small">Bengali, 14 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/sp2_small.png" class="w3-circle border"/> <audio src = "./mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Shankhadip Paria</h3>
 </div> 
 </div>
 </div>
@@ -172,12 +172,12 @@ function myContrFunction() {
 </a>
 </div>
 
-<!--<div class="authorcard w3-center w3-round-large">
+<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_pp.html" title = "Bhojpuri podcasts by Prabhakar Pandey" class = "anoline">
 <p>Prabhakar Pandey</p>
 <img src="./images/pp_small.png" class="w3-circle borderwhite" alt="Prabhakar Pandey"/>
 </a>
-</div>-->
+</div>
 
 <!--<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli Arun Murthy" class = "anoline">
@@ -206,7 +206,7 @@ function myContrFunction() {
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bhojpuri.html" class="w3-btn w3-white w3-round-jumbo border">Bhojpuri</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
+<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bhojpuri.html" class="w3-btn w3-white w3-round-jumbo border">Bhojpuri</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
 
 </div>
 
