--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Apnan se joojhat maibhakha</h3>
-  <p class="w3-text-grey w3-small">Bhojpur, 21 Apr 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/pp_small.png" class="w3-circle border"/> <audio src = "./mp3/pp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Prabhakar Pandey</h3>
+<h3 class = "w3-border-bottom">Kaayganji</h3>
+  <p class="w3-text-grey w3-small">kannada, 28 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/km_small.png" class="w3-circle border"/> <audio src = "./mp3/km_kaayganji.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Kumudavalli Arun Murthy</h3>
 </div> 
 </div>
 </div>
@@ -72,10 +72,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Biye barir byakaran</h3>
-  <p class="w3-text-grey w3-small">Bengali, 14 Apr 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/sp2_small.png" class="w3-circle border"/> <audio src = "./mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Shankhadip Paria</h3>
+<h3 class = "w3-border-bottom">Apnan se joojhat maibhakha</h3>
+  <p class="w3-text-grey w3-small">Bhojpuri, 21 Apr 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/pp_small.png" class="w3-circle border"/> <audio src = "./mp3/pp_maibhakha.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Prabhakar Pandey</h3>
 </div> 
 </div>
 </div>
@@ -179,12 +179,12 @@ function myContrFunction() {
 </a>
 </div>
 
-<!--<div class="authorcard w3-center w3-round-large">
+<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli Arun Murthy" class = "anoline">
 <p>Kumudavalli Arun Murthy</p>
 <img src="./images/km_small.png" class="w3-circle borderwhite" alt="Kumudavalli Arun Murthy"/>
 </a>
-</div>-->
+</div>
 
 <!--<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ad.html" title = "Bengali podcasts by Arjo Dasgupta" class = "anoline">
