--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function myContrFunction() {
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
 <h3 class = "w3-border-bottom">Kaayganji</h3>
-  <p class="w3-text-grey w3-small">kannada, 28 Apr 2016</p>
+  <p class="w3-text-grey w3-small">Kannada, 28 Apr 2016</p>
   <p class = "w3-padding-tiny"><img src="./images/km_small.png" class="w3-circle border"/> <audio src = "./mp3/km_kaayganji.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
 <h3 class = "w3-border-top">Kumudavalli Arun Murthy</h3>
 </div> 
@@ -146,7 +146,7 @@ function myContrFunction() {
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_mk.html" title = "Hindi podcasts by Mohammad Kausen" class = "anoline">
-<p>Mohd Kausen</p>
+<p>Mohd. Kausen</p>
 <img src="./images/mk_small.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>
 </a>
 </div>
@@ -180,7 +180,7 @@ function myContrFunction() {
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli Arun Murthy" class = "anoline">
+<a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli A. M." class = "anoline">
 <p>Kumudavalli Arun Murthy</p>
 <img src="./images/km_small.png" class="w3-circle borderwhite" alt="Kumudavalli Arun Murthy"/>
 </a>
