--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ function myContrFunction() {
 
 <div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_sp.html" title = "Kannada podcasts by Sarala Prakash" class = "anoline">
-<p>Sarala Prakash</p>
+<p>Sarala P.</p>
 <img src="./images/sp_small.png" class="w3-circle borderwhite" alt="Sarala Prakash"/>
 </a>
 </div>
@@ -180,8 +180,8 @@ function myContrFunction() {
 </div>
 
 <div class="authorcard w3-center w3-round-large">
-<a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli A. M." class = "anoline">
-<p>Kumudavalli Arun Murthy</p>
+<a href = "./html/author_km.html" title = "Kannada podcasts by Kumudavalli Arun Murthy" class = "anoline">
+<p>Kumudavalli A.M.</p>
 <img src="./images/km_small.png" class="w3-circle borderwhite" alt="Kumudavalli Arun Murthy"/>
 </a>
 </div>
