--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -51,6 +51,10 @@ $(function(){
   <div class="w3-col s6"><p>Beti ka byaah (Hindi)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Haqeeqat (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_haqeeqat.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
 
 </div>
 
