--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -105,6 +105,10 @@ function myFunction2() {
   <div class="w3-col s6"><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ap_tiny.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>&nbsp;&nbsp;Chetana (Ajay Purohit)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
 <p class = "w3-small"><a onclick="myFunction3()" class = "w3-btn w3-round-jumbo w3-white border">Load more podcasts</a></p>
 <script>
 function myFunction3() {
@@ -115,8 +119,8 @@ function myFunction3() {
 
 <div id = "p4" class="w3-hide">
 <div class="w3-row-padding w3-border">
-  <div class="w3-col s6"><p><img src="../images/ap_tiny.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>&nbsp;&nbsp;Chetana (Ajay Purohit)</p></div>
-  <div class="w3-col s6"><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+  <div class="w3-col s6"><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Haqeeqat (Rahul Shabd)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_haqeeqat.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
 </div>
 
