linking to sitemap

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -129,6 +129,7 @@ function myFunction3() {
 </div>
 
 <div id = "footer"></div>
+<div class = "w3-container"><p class = "w3-small"><a href = "../sitemap.html"/>Sitemap</a></p></div>
 
 </body>
 
