--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Haqeeqat</h3>
+<h3 class = "w3-border-bottom">Yaad</h3>
   <p class="w3-text-grey w3-small">Hindi, 5 May 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/rs_small.png" class="w3-circle border"/> <audio src = "./mp3/ra_haqeeqat.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Rahul Shabd</h3>
+  <p class = "w3-padding-tiny"><img src="./images/hp_small.png" class="w3-circle border"/> <audio src = "./mp3/hp_yaad.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Himanshu Pandey</h3>
 </div> 
 </div>
 </div>
@@ -193,12 +193,12 @@ function myContrFunction() {
 </a>
 </div>-->
 
-<!--<div class="authorcard w3-center w3-round-large">
+<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_hp.html" title = "Hindi podcasts by Himanshu  Pandey" class = "anoline">
 <p>Himanshu  Pandey</p>
 <img src="./images/hp_small.png" class="w3-circle borderwhite" alt="Himanshu Pandey"/>
 </a>
-</div>-->
+</div>
 
 </div>
 
