adding HP's story

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -119,9 +119,13 @@ function myFunction3() {
 
 <div id = "p4" class="w3-hide">
 <div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/hp_tiny.png" class="w3-circle borderwhite" alt="Himanshu Pandey"/>&nbsp;&nbsp;Yaad kar raha hun (Himanshu Pandey)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/hp_yaad.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<!--<div class="w3-row-padding w3-border">
   <div class="w3-col s6"><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Haqeeqat (Rahul Shabd)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/rs_haqeeqat.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
-</div>
+</div>-->
 </div>
 
 </div>
