--- a/html/header.html
+++ b/html/header.html
@@ -33,7 +33,7 @@
       <a href="author_ap.html">Ajay Purohit</a>
       <a href="author_ab.html">Anindita Basu</a>
 	  <!--<a href="author_ad.html">Arjo Dasgupta</a>-->
-	  <!--<a href="author_hp.html">Himanshu Pandey</a>-->
+      <a href="author_hp.html">Himanshu Pandey</a>
       <a href="author_km.html">Kumudavalli Arun Murthy</a>
       <a href="author_mk.html">Mohammad Kausen</a>
       <a href="author_pp.html">Prabhakar Pandey</a>
