--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -48,6 +48,10 @@ $(function(){
   <div class="w3-col s6"><p><img src="../images/sp2_tiny.png" class="w3-circle borderwhite" alt="Shankhadip Paria"/>&nbsp;&nbsp;Biye barir byakaran (Shankhadip Paria)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ad_tiny.png" class="w3-circle borderwhite" alt="Arjo Dasgupta"/>&nbsp;&nbsp;Mati mayer gaan (Arjo Dasgupta)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ad_maatima.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
 
 </div>
 
