--- a/sitemap.html
+++ b/sitemap.html
@@ -46,7 +46,7 @@
 <ul>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu (Hindi)</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_ad.html"><span class="title">Arjo Dasgupta (Bengali)</span></a></li>-->
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_ad.html"><span class="title">Arjo Dasgupta (Bengali)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_hp.html"><span class="title">Himanshu Pandey (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_km.html"><span class="title">Kumudavalli Arun Murthy (Kannada)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen (Hindi)</span></a></li>
